--- a/survey.html
+++ b/survey.html
@@ -6,11 +6,6 @@
 <body>
 Optimity Sydney
 <!-- Form loader -->
-<script type="text/javascript">var submitted=false;</script>
-<iframe name="hidden_iframe" id="hidden_iframe"
-style="display:none;" onload="if(submitted)
-{window.location='http://optimity.sydney';}"></iframe>
-<form action="https://docs.google.com/forms/d/1HLwzRDqiMqXVbeDNy55F6ETi8rSALNikX212pRpLXGk/" method="post"
-target="hidden_iframe" onsubmit="submitted=true;">
+<iframe src="https://docs.google.com/forms/d/1HLwzRDqiMqXVbeDNy55F6ETi8rSALNikX212pRpLXGk/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </body>
 </html>
