--- a/survey.html
+++ b/survey.html
@@ -4,8 +4,7 @@
 <title>Optimity Sydney WiFi Survey</title>
 </head>
 <body>
-Optimity Sydney
 <!-- Form loader -->
-<iframe src="https://docs.google.com/forms/d/1HLwzRDqiMqXVbeDNy55F6ETi8rSALNikX212pRpLXGk/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/1HLwzRDqiMqXVbeDNy55F6ETi8rSALNikX212pRpLXGk/viewform?embedded=true" width="100%" height="1500px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </body>
 </html>
