--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Solutions</h2>
                     <p>We are a next generatoin wireless technologies business. We provide consultancy and services around three key areas;</p>
-                    <a href="#" class="btn btn-default btn-lg">WISPer</a>
-                    <a href="#" class="btn btn-default btn-lg">WaaS</a>
-                    <a href="#" class="btn btn-default btn-lg">WIS</a>
+                    <a href="#solutions" class="btn btn-default btn-lg">WISPer</a>
+                    <a href="#solutions" class="btn btn-default btn-lg">WaaS</a>
+                    <a href="#solutions" class="btn btn-default btn-lg">WIS</a>
                 </div>
             </div>
         </div>
