--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Optimity Sydney</title>
+    <title>Error 404 @ Optimity Sydney</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -63,13 +63,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#survey">Free WiFi Survey</a>
+                        <a class="page-scroll" href="/index.html">Homepage</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#solutions">solutions</a>
+                        <a class="page-scroll" href="/solutions.html#solutions">Solutions</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="/index.html#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -84,9 +84,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Building Sydney's next generation of connectivity</h1>
-                        <p class="intro-text">Optimity Sydney are wireless experts, providing ultra low latency Gigabit broadband internet services via the latest fixed wireless radio technologies. We also provide WiFi support and consultancy services. This backgroud gives us a strong understanding of the very latest wireless innovation using, NFC (Near Field Communication), BLE (Bluetooth Low Energy) and beacon technologies in the workplace.</p>
-                        <p>To demonstrate our value we are offering a limited number of no strings attached complementry on site surveys with full report of your workspace normally valued at over a $1,000.</p>
+                        <h1 class="brand-heading">What are you doing?</h1>
+                        <p class="intro-text">This is not a page we have on our site, I'm giving you a ERROR 404 and will ask you to move along quietly please.</p>
+                        <p>Serriouly, this is not the page your looking for, stop reading and find a <a href="/">real page :D</a></p>
                         <a href="#survey" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -95,59 +95,7 @@
             </div>
         </div>
     </header>
-
-    <!-- About Section -->
-    <section id="survey" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Free WiFi Survey</h2>
-            </div>
-            <iframe src="https://docs.google.com/forms/d/1HLwzRDqiMqXVbeDNy55F6ETi8rSALNikX212pRpLXGk/viewform?embedded=true" width="100%" height="950" frameborder="0" marginheight="0" style="border:0" marginwidth="0">Loading...</iframe>
-        </div>
-    </section>
-
-    <!-- Download Section -->
-    <section id="solutions" class="content-section text-center">
-        <div class="download-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Solutions</h2>
-                    <p>We are a next generation wireless technologies business. We provide consultancy and services around three key areas;</p>
-                    <a href="#solutions" class="btn btn-default btn-lg">WISPer</a>
-                    <a href="#solutions" class="btn btn-default btn-lg">WaaS</a>
-                    <a href="#solutions" class="btn btn-default btn-lg">WIS</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Us</h2>
-                <p>Our offices is at 608 Harris Street, Ultimo NSW 2007, Australia</p>
-                <p><a href="mailto:support@optimity.sydney">support@optimity.sydney</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/OptimitySydney" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/optimity-sydney" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://google.com/+OptimitySydneyAustralia" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-    <!-- Map Section -->
-    <div id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3312.357343254878!2d151.20036790000003!3d-33.8804496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12ae25bf2f418b%3A0xc2a84199b3699c9b!2s608+Harris+St%2C+Ultimo+NSW+2007!5e0!3m2!1sen!2sau!4v1441953859885" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen>Loading...</iframe></div>
-
-    <!-- Footer -->
+  <!-- Footer -->
     <footer>
         <div class="container text-center">
             <p>Copyright &copy; Optimity Sydney Pty Ltd ACN# 608 115 555</p>
