--- a/solutions.html
+++ b/solutions.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Optimity Sydney</title>
+    <title>Solutions @ Optimity Sydney</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -63,13 +63,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#survey">Free WiFi Survey</a>
+                        <a class="page-scroll" href="#survey">WaaS</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#solutions">solutions</a>
+                        <a class="page-scroll" href="#solutions">WISPer</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">WIS</a>
                     </li>
                 </ul>
             </div>
@@ -84,8 +84,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Building Sydney's next generation of connectivity</h1>
-                        <p class="intro-text">Optimity Sydney are wireless experts, providing ultra low latency Gigabit broadband internet services via the latest fixed wireless radio technologies. We also provide WiFi support and consultancy services. This backgroud gives us a strong understanding of the very latest wireless innovation using, NFC (Near Field Communication), BLE (Bluetooth Low Energy) and beacon technologies in the workplace.</p>
+                        <h1 class="brand-heading">Building Sydneys next generation of connectivity</h1>
+                        <p class="intro-text">Optimity Sydney are wireless experts, providing ultra low latency Gigabit broadband internet services via the latest fixed wireless radio technologies. We also provide WiFi support and consultancy services and develop bleeding edge wireless innovation using, NFC (Near Field Communication), BLE (Bluetooth Low Energy) and beacon technologies in the workplace.</p>
                         <p>To demonstrate our value we are offering a limited number of no strings attached complementry on site surveys with full report of your workspace normally valued at over a $1,000.</p>
                         <a href="#survey" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -97,22 +97,22 @@
     </header>
 
     <!-- About Section -->
-    <section id="survey" class="container content-section text-center">
+    <section id="WaaS" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Free WiFi Survey</h2>
+                <h2>WiFi as a Service</h2>
+                <p>WiFi is a ever more growing requirment within all workplaces. There are very few business that don't need to provide it, yet most organisations do not provide the service well.</p>
             </div>
-            <iframe src="https://docs.google.com/forms/d/1HLwzRDqiMqXVbeDNy55F6ETi8rSALNikX212pRpLXGk/viewform?embedded=true" width="100%" height="950" frameborder="0" marginheight="0" style="border:0" marginwidth="0">Loading...</iframe>
         </div>
     </section>
 
     <!-- Download Section -->
-    <section id="solutions" class="content-section text-center">
+    <section id="WISPer" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Solutions</h2>
-                    <p>We are a next generation wireless technologies business. We provide consultancy and services around three key areas;</p>
+                    <h2>Wireless Internet Service Provider</h2>
+                    <p>Wireless as a main internet provition can be the most cost effective and lowest latency links available in an urban environment. It's profile allows for higher bandwith than any copper based technologies and as it takes the shortest path (line of sight) it also can have a lower latency than fibre links.</p>
                     <a href="#solutions" class="btn btn-default btn-lg">WISPer</a>
                     <a href="#solutions" class="btn btn-default btn-lg">WaaS</a>
                     <a href="#solutions" class="btn btn-default btn-lg">WIS</a>
