--- a/404.html
+++ b/404.html
@@ -85,8 +85,8 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">What are you doing?</h1>
-                        <p class="intro-text">This is not a page we have on our site, I'm giving you a ERROR 404 and will ask you to move along quietly please.</p>
-                        <p>Serriouly, this is not the page your looking for, stop reading and find a <a href="/">real page :D</a></p>
+                        <p class="intro-text">This is not a page we have on our site, I'm giving you a <strong>ERROR 404</strong> and will ask you to move along quietly please.</p>
+                        <p>Seriously, this is not the page your looking for, stop reading this and find<a href="/"> a real page :D</a></p>
                         <a href="#survey" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
