--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#survey">Free WiFi Survey</a>
+                        <a class="page-scroll" href="#WaaS">WaaS</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#solutions">solutions</a>
+                        <a class="page-scroll" href="#WISPer">WISPer</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#WIS">WIS</a>
                     </li>
                 </ul>
             </div>
@@ -97,7 +97,7 @@
     </header>
 
     <!-- About Section -->
-    <section id="survey" class="container content-section text-center">
+    <section id="WaaS" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Free WiFi Survey</h2>
@@ -107,7 +107,7 @@
     </section>
 
     <!-- Download Section -->
-    <section id="solutions" class="content-section text-center">
+    <section id="WISPer" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
@@ -122,11 +122,11 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
+    <section id="WIS" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Us</h2>
-                <p>Our offices is at 608 Harris Street, Ultimo NSW 2007, Australia</p>
+                <h2>Wireless Inovation Service</h2>
+                <p>Ok, we know not another acronym... but bringing together all the latests trends in wireless inovation services is worth it.</p>
                 <p><a href="mailto:support@optimity.sydney">support@optimity.sydney</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
@@ -150,7 +150,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Optimity Sydney Pty Ltd ACN# 608 115 555</p>
+            <p><a href="#page-top">top of page</a> | Copyright &copy; Optimity Sydney Pty Ltd ACN# 608 115 555</p>
         </div>
     </footer>
 
