--- a/solutions.html
+++ b/solutions.html
@@ -63,13 +63,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#survey">WaaS</a>
+                        <a class="page-scroll" href="#WaaS">WaaS</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#solutions">WISPer</a>
+                        <a class="page-scroll" href="#WISPer">WISPer</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">WIS</a>
+                        <a class="page-scroll" href="#WIS">WIS</a>
                     </li>
                 </ul>
             </div>
@@ -84,10 +84,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Building Sydneys next generation of connectivity</h1>
-                        <p class="intro-text">Optimity Sydney are wireless experts, providing ultra low latency Gigabit broadband internet services via the latest fixed wireless radio technologies. We also provide WiFi support and consultancy services and develop bleeding edge wireless innovation using, NFC (Near Field Communication), BLE (Bluetooth Low Energy) and beacon technologies in the workplace.</p>
-                        <p>To demonstrate our value we are offering a limited number of no strings attached complementry on site surveys with full report of your workspace normally valued at over a $1,000.</p>
-                        <a href="#survey" class="btn btn-circle page-scroll">
+                        <h1 class="brand-heading">Optimity Sydney</br> Wireless Solutions</h1>
+                        <p class="intro-text">We provide three main types of wireless solutions. WaaS (Wireless as a Service), we are a WISPer (Wireless Internet Service Provider) and lastly WIS (Wirless Inovation Services)</p>
+                        <a href="#WaaS" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
@@ -101,7 +100,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>WiFi as a Service</h2>
-                <p>WiFi is a ever more growing requirment within all workplaces. There are very few business that don't need to provide it, yet most organisations do not provide the service well.</p>
+                <p class="intro-text">WiFi is a ever more growing requirment within all workplaces. There are very few business that don't need to provide it, yet most organisations do not provide the service well.</p>
             </div>
         </div>
     </section>
@@ -112,39 +111,21 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Wireless Internet Service Provider</h2>
-                    <p>Wireless as a main internet provition can be the most cost effective and lowest latency links available in an urban environment. It's profile allows for higher bandwith than any copper based technologies and as it takes the shortest path (line of sight) it also can have a lower latency than fibre links.</p>
-                    <a href="#solutions" class="btn btn-default btn-lg">WISPer</a>
-                    <a href="#solutions" class="btn btn-default btn-lg">WaaS</a>
-                    <a href="#solutions" class="btn btn-default btn-lg">WIS</a>
+                    <p class="intro-text">Wireless as a main internet provition can be the most cost effective and lowest latency links available in an urban environment. It's profile allows for higher bandwith than any copper based technologies and as it takes the shortest path (line of sight) it also can have a lower latency than fibre links.</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
+    <section id="WIS" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Us</h2>
-                <p>Our offices is at 608 Harris Street, Ultimo NSW 2007, Australia</p>
-                <p><a href="mailto:support@optimity.sydney">support@optimity.sydney</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/OptimitySydney" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/optimity-sydney" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://google.com/+OptimitySydneyAustralia" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
+                <h2>Wireless Inovation Services</h2>
+                <p class="intro-text">There is a emerging class of small wireless communication commonly reffered to as beacons or BLE (Bluetooth low energy). These devices allow for proximity sensing to transmit a universally unique identifier picked up by a compatible app or operating system. The identifier can be used to determine the device's physical location, track customers, or trigger a location-based action on the device such as a check-in on social media or a push notification. The use and application is still being defined and the two most common protocols are Apple iBeacon&trade; and Google Eddystone&trade;.</p>
             </div>
         </div>
     </section>
-
-    <!-- Map Section -->
     <div id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3312.357343254878!2d151.20036790000003!3d-33.8804496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12ae25bf2f418b%3A0xc2a84199b3699c9b!2s608+Harris+St%2C+Ultimo+NSW+2007!5e0!3m2!1sen!2sau!4v1441953859885" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen>Loading...</iframe></div>
 
     <!-- Footer -->
