--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#WaaS">WaaS</a>
+                        <a class="page-scroll" href="#survey">Free WiFi Survey</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#WISPer">WISPer</a>
+                        <a class="page-scroll" href="#solutions">solutions</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#WIS">WIS</a>
+                        <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -85,7 +85,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Building Sydney's next generation of connectivity</h1>
-                        <p class="intro-text">Optimity Sydney are wireless experts, providing ultra low latency Gigabit broadband internet services via the latest fixed wireless radio technologies. We also provide WiFi support and consultancy services. This backgroud gives us a strong understanding of the very latest wireless innovation using, NFC (Near Field Communication), BLE (Bluetooth Low Energy) and beacon technologies in the workplace.</p>
+                        <p class="intro-text">Optimity Sydney are wireless experts, providing ultra low latency Gigabit broadband internet services via the latest fixed wireless radio technologies. We also provide WiFi support and consultancy services. This backgroud gives us a strong understanding the very latest wireless innovation using, NFC (Near Field Communication), BLE (Bluetooth Low Energy) and beacon technologies in the workplace.</p>
                         <p>To demonstrate our value we are offering a limited number of no strings attached complementry on site surveys with full report of your workspace normally valued at over a $1,000.</p>
                         <a href="#survey" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -97,7 +97,7 @@
     </header>
 
     <!-- About Section -->
-    <section id="WaaS" class="container content-section text-center">
+    <section id="survey" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Free WiFi Survey</h2>
@@ -107,7 +107,7 @@
     </section>
 
     <!-- Download Section -->
-    <section id="WISPer" class="content-section text-center">
+    <section id="solutions" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
@@ -122,11 +122,11 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="WIS" class="container content-section text-center">
+    <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Wireless Inovation Service</h2>
-                <p>Ok, we know not another acronym... but bringing together all the latests trends in wireless inovation services is worth it.</p>
+                <h2>Contact Us</h2>
+                <p>Our offices is at 608 Harris Street, Ultimo NSW 2007, Australia</p>
                 <p><a href="mailto:support@optimity.sydney">support@optimity.sydney</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
@@ -150,7 +150,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p><a href="#page-top">top of page</a> | Copyright &copy; Optimity Sydney Pty Ltd ACN# 608 115 555</p>
+            <p>Copyright &copy; Optimity Sydney Pty Ltd ACN# 608 115 555</p>
         </div>
     </footer>
 
