--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Solutions</h2>
                     <p>We are a next generation wireless technologies business. We provide consultancy and services around three key areas;</p>
-                    <a href="#solutions" class="btn btn-default btn-lg">WISPer</a>
-                    <a href="#solutions" class="btn btn-default btn-lg">WaaS</a>
-                    <a href="#solutions" class="btn btn-default btn-lg">WIS</a>
+                    <a href="solutions.html#WISPer" class="btn btn-default btn-lg">WISPer</a>
+                    <a href="solutions.html#WaaS" class="btn btn-default btn-lg">WaaS</a>
+                    <a href="solutions.html#WIS" class="btn btn-default btn-lg">WIS</a>
                 </div>
             </div>
         </div>
