--- a/solutions.html
+++ b/solutions.html
@@ -100,7 +100,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>WiFi as a Service</h2>
-                <p class="intro-text">WiFi is a ever more growing requirment within all workplaces. There are very few business that don't need to provide it, yet most organisations do not provide the service well.</p>
+                <p class="intro-text">WiFi is a ever more growing requirment within all workplaces. There are very few business that don't need to provide it, yet most organisations do not provide the service well. We provide site surveys, managed solutions and general consultancy to get the most out of your WiFi.</p>
             </div>
         </div>
     </section>
@@ -111,7 +111,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Wireless Internet Service Provider</h2>
-                    <p class="intro-text">Wireless as a main internet provition can be the most cost effective and lowest latency links available in an urban environment. It's profile allows for higher bandwith than any copper based technologies and as it takes the shortest path (line of sight) it also can have a lower latency than fibre links.</p>
+                    <p class="intro-text">Fixed wireless (as opposed to mobile wireless e.g. Mobile 3G/4G/LTE) internet can be the most cost effective and lowest latency connection available in an urban environment. It's profile allows for higher bandwith than any copper based technologies and as it takes the shortest path (line of sight) it also can have a lower latency than fibre links. We are building a next generation network with a focus on IPv6, cloud firewall provisioning and the latest high bandwith point to point radio links. Some people have used Wi-Max or multi-point solutions in the past and this performance can degrate with the more users that join the network. Our technology can have a more reliable consatant symetric link, with non-contended provioning that will give you more options now and in the future.</p>
                 </div>
             </div>
         </div>
@@ -122,7 +122,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Wireless Inovation Services</h2>
-                <p class="intro-text">There is a emerging class of small wireless communication commonly reffered to as beacons or BLE (Bluetooth low energy). These devices allow for proximity sensing to transmit a universally unique identifier picked up by a compatible app or operating system. The identifier can be used to determine the device's physical location, track customers, or trigger a location-based action on the device such as a check-in on social media or a push notification. The use and application is still being defined and the two most common protocols are Apple iBeacon&trade; and Google Eddystone&trade;.</p>
+                <p class="intro-text">There is a emerging class of small wireless communication commonly reffered to as beacon or BLE (Bluetooth low energy). These devices allow for proximity sensing to transmit a universally unique identifier picked up by a compatible app or operating system. The identifier can be used to determine the device's physical location, track customers, or trigger a location-based action on the device such as a check-in on social media or a push notification. The use and application is still being defined and the two most common protocols are Apple iBeacon&trade; and Google Eddystone&trade;. We can enable businesses ready to capture this frontier with embedding technology into physical things to give a more enriching customer experience.</p>
             </div>
         </div>
     </section>
