--- a/solutions.html
+++ b/solutions.html
@@ -60,7 +60,7 @@
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
-                        <a href="#page-top"></a>
+                        <a href="/#page-top"></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#WaaS">WaaS</a>
