--- a/solutions.html
+++ b/solutions.html
@@ -50,7 +50,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
+                <a class="navbar-brand page-scroll" href="/#page-top">
                     <i class="fa"><img src="img/os_logo.svg" height="35" alt="Optimity Sydney Logo"></i>
                 </a>
             </div>
@@ -60,7 +60,7 @@
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
-                        <a href="/#page-top"></a>
+                        <a href="#page-top"></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#WaaS">WaaS</a>
