--- a/solutions.html
+++ b/solutions.html
@@ -85,7 +85,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Optimity Sydney</br> Wireless Solutions</h1>
-                        <p class="intro-text">We provide three main types of wireless solutions. WaaS (Wireless as a Service), we are a WISPer (Wireless Internet Service Provider) and lastly WIS (Wirless Inovation Services)</p>
+                        <p class="intro-text">We provide three main types of wireless solutions. <a class="page-scroll" href="#WaaS">WaaS (Wireless as a Service)</a>. We are also a next generation <a class="page-scroll" href="#WISPer">WISPer (Wireless Internet Service Provider)</a>. Lastly we enable <a class="page-scroll" href="#WIS">WIS (Wireless Innovation Services)</a></p>
                         <a href="#WaaS" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -111,7 +111,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Wireless Internet Service Provider</h2>
-                    <p class="intro-text">Fixed wireless (as opposed to mobile wireless e.g. Mobile 3G/4G/LTE) internet can be the most cost effective and lowest latency connection available in an urban environment. It's profile allows for higher bandwith than any copper based technologies and as it takes the shortest path (line of sight) it also can have a lower latency than fibre links. We are building a next generation network with a focus on IPv6, cloud firewall provisioning and the latest high bandwith point to point radio links. Some people have used Wi-Max or multi-point solutions in the past and this performance can degrate with the more users that join the network. Our technology can have a more reliable consatant symetric link, with non-contended provioning that will give you more options now and in the future.</p>
+                    <p class="intro-text">Fixed wireless (as opposed to mobile wireless e.g. Mobile 3G/4G/LTE) internet can be the most cost effective and lowest latency connection available in an urban environment. It's profile allows for higher bandwith than any copper based technologies and as it takes the shortest path (line of sight) it also can have a lower latency than fibre links. We are building a next generation network with a focus on IPv6, cloud firewall provisioning and the latest high bandwith point to point radio links. Some people have used Wi-Max or multi-point solutions in the past and this performance can degrate with the more users that join the network. Our technology can have a more reliable fully symmetric links, with non-contended provioning that will give you more options now and in the future.</p>
                 </div>
             </div>
         </div>
@@ -122,7 +122,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Wireless Inovation Services</h2>
-                <p class="intro-text">There is a emerging class of small wireless communication commonly reffered to as beacon or BLE (Bluetooth low energy). These devices allow for proximity sensing to transmit a universally unique identifier picked up by a compatible app or operating system. The identifier can be used to determine the device's physical location, track customers, or trigger a location-based action on the device such as a check-in on social media or a push notification. The use and application is still being defined and the two most common protocols are Apple iBeacon&trade; and Google Eddystone&trade;. We can enable businesses ready to capture this frontier with embedding technology into physical things to give a more enriching customer experience.</p>
+                <p class="intro-text">There is a emerging class of small wireless communication technologies commonly reffered to as NFC (Near Field Communication), beacon or BLE (Bluetooth low energy). These devices allow for proximity sensing to transmit a universally unique identifier picked up by a compatible app or operating system. The identifier can be used to determine the device's physical location, track customers, or trigger a location-based action on the device such as a check-in on social media, push notification and even online payments. The use and application is still being defined and the two most common protocols are Apple iBeacon&trade; and Google Eddystone&trade;. We can enable businesses ready to capture this frontier by embedding technology into physical things to give a more enriching customer experience.</p>
             </div>
         </div>
     </section>
