--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Building Sydney's next generation of connectivity</h1>
-                        <p class="intro-text">Optimity Sydney are wireless experts, providing ultra low latency Gigabit broadband internet services via the latest fixed wireless radio technologies. We also provide WiFi support and consultancy services. This backgroud gives us a strong understanding the very latest wireless innovation using NFC (Near Field Communication), BLE (Bluetooth Low Energy) and beacon technologies in the workplace.</p>
+                        <p class="intro-text">Optimity Sydney are wireless experts, providing ultra low latency Gigabit broadband internet services via the latest fixed wireless radio technologies. We also provide WiFi support and consultancy services. This background gives us a strong understanding the very latest wireless innovation using NFC (Near Field Communication), BLE (Bluetooth Low Energy) and beacon technologies in the workplace.</p>
                         <p>To demonstrate our value we are offering a limited number of no strings attached complementry on site WiFi surveys of your workspace with full reporting normally valued at over a $1,000.</p>
                         <a href="#survey" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
